Version 2.02.97 - 
===============================
  Add make install_systemd_generators.
  Add generator for lvm2 activation systemd units.
  Add lvm_config_find_bool lvm2app fn to retrieve bool value from config tree.
  Respect --test also when using lvmetad.
  No longer capitalise first LV attribute char for invalid snapshots.
  Allow vgextend to add PVs to a VG that is missing PVs.
  Recognise Micron PCIe SSDs in filter and move array out to device-types.h.
  Fix segfault when attempting to replace RAID 4/5/6 device (2.02.97).
  Fix dumpconfig <node> to print only <node> without its siblings (2.02.89).
  Do not issue "Failed to handle a client connection" error if lvmetad killed.
  Support changing of discard and zeroing for thin pool.
  Report used discard for thin pool and volume.
  Add support for controlling discard behavior of thin pool.
  Detect features for new 1.1 thin pool target.
  Count percentage of completeness upwards when merging a snapshot volume.
  Skip activation when using vg/lvchange --sysinit -a ay and lvmetad is active.
  Fix extending RAID 4/5/6 logical volumes
  Fix test for PV with unknown VG in process_each_pv to ignore ignored mdas.
  Update man pages with --activate ay option and auto_activation_volume_list.
  Fix _alloc_parallel_area to avoid picking already-full areas for raid devices.
  Use vgchange -aay instead of vgchange -ay in clmvd init script.
  Add activation/auto_activation_volume_list to lvm.conf.
  Add --activate ay to lvcreate, lvchange, pvscan and vgchange.
  Add support for volume autoactivation using lvmetad.
  Add --activate synonym for --available arg and prefer --activate.
  Never issue discards when LV extents are being reconfigured, not deleted.
  Allow release_lv_segment_area to fail as functions it calls can fail.
  Open device read-only to obtain readahead value.
  Fix lvconvert error path NULL pointer dereference.
  Check for create_instance() fail in pvscan_lvmetad_single().